--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "spotify-web-api-js": "^1.5.0"
+    "react-scripts": "^5.0.1",
+    "spotify-web-api-js": "^1.5.2"
   },
   "scripts": {
     "predeploy": "npm run build",
